fix: aligning this repo with paragon standards (#184)

--- a/src/components/catalogs/styles/_enterprise_catalogs.scss
+++ b/src/components/catalogs/styles/_enterprise_catalogs.scss
@@ -1,11 +1,4 @@
-.enterprise-catalogs {
-  @extend .mt-3;
-  @extend .mb-5;
-  padding: 0px 16px;
-}
-
 .full-body {
-  padding: 0px !important;
   overflow-x: hidden; /* avoid horizontal scrollbar */
 }
 
@@ -14,31 +7,11 @@
   padding: 0em 0.9em 0em 0em;
 }
 
-// custom formatting to be removed with the paragon addition of "chip" component
-.enterprise-catalogs-header {
-  .fe__refinement-badge {
-    border-radius: 6px;
-    border: 1px solid $light-300;
-    background-color: $white;
-  }
-  .fe__current-refinement-button {
-    color: $gray-700;
-    padding: 2px !important;
-  }
-  .fe__current-refinement-button:hover {
-    background: $gray-200;
-    text-decoration: none;
-  }
-}
-
 .course-info-title {
   position: relative;
   width: 70% !important;
   left: 0% !important;
   flex-shrink: 1;
-  font-weight: 700;
-  font-size: 40px !important;
-  line-height: 44px !important;
   letter-spacing: -0.02em;
 }
 
@@ -46,11 +19,6 @@
   position: relative;
   height: 36px;
   left: 0% !important;
-  margin-top: 13px;
-
-  font-weight: bold;
-  font-size: 32px !important;
-  line-height: 36px;
 }
 
 .course-info-hero {
@@ -70,8 +38,7 @@
   height: 70%;
   max-height: 90px;
   background-color: $light-300;
-  box-shadow: 0 1px 1px rgba(128, 128, 128, 0.1), 0 1px 1px rgba(128, 128, 128, 0.1), 0 2px 2px rgba(128, 128, 128, 0.1),
-    0 2px 2px rgba(128, 128, 128, 0.1);
+  box-shadow: $box-shadow;
 }
 
 .card {
@@ -89,8 +56,7 @@
   top: 60px;
   max-width: 100px;
   background-color: $light-300;
-  box-shadow: 0 1px 1px rgba(128, 128, 128, 0.1), 0 1px 1px rgba(128, 128, 128, 0.1), 0 2px 2px rgba(128, 128, 128, 0.1),
-    0 2px 2px rgba(128, 128, 128, 0.1);
+  box-shadow: $box-shadow;
 }
 
 .cards-course-image {
@@ -99,16 +65,8 @@
   width: auto;
 }
 
-.cards-title {
-  margin: 25px 16px 25px 16px;
-}
-
 .cards-spacing {
   flex-grow: 3;
-}
-
-.cards-body {
-  margin: 25px 16px 25px 16px;
 }
 
 .program-card {
@@ -117,64 +75,24 @@
   color: $white;
 }
 
-.program-title {
-  font-weight: 700;
-  color: $white;
-}
-
-.banner {
-  display: flex;
-  margin: 38px 0px 38px 0px;
-}
-
 .banner-section {
-  margin-right: 16px;
   line-height: 24px;
   color: $primary-300;
 }
 
 .slash {
+  font-weight: 700;
   font-size: 60px;
   color: $gray-100;
 }
 
-.banner-title {
-  display: flex;
-  font-weight: 700;
-  font-size: 18px;
-}
-
-.banner-title .pgn__icon {
-  margin-right: 6px;
-}
-
 .banner-subtitle {
   margin-left: 30px;
-  font-weight: 400;
-  font-size: 14px;
 }
 
 .course-info-modal {
   position: absolute !important;
   top: 10%;
-}
-
-.associated-catalogs-text {
-  font-weight: 400;
-  font-family: "Roboto Mono";
-  font-size: 1.4rem !important;
-  margin-bottom: 4px;
-}
-
-.course-info-associated-catalog-header {
-  margin-bottom: 3%;
-}
-
-.course-info-description-title {
-  font-weight: bold;
-  font-weight: 700;
-  font-size: 22px !important;
-  margin-bottom: 0;
 }
 
 .pgn__modal-close-container {
@@ -189,11 +107,6 @@
 
 .catalog-search-result-column-title {
   text-align: left;
-}
-
-.course-info-modal-header {
-  display: flex;
-  height: auto !important;
 }
 
 .course-info-skills {
